--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "server",
     "echo"
   ],
-  "author": "Daniel Llewellyn",
+  "author": "Amin Uzdenov",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Amino7/AlexaServer/issues"
